[metadata]
name = lboxd
version = 0.1.0
author = Nagasaki Nightmare
author_email = nuclearfall@protonmail.com
description = A python library for accessing list and film data from letterboxd.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github/nuclearfall/letterboxd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD-2
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src